# perplexity-openai-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Justfile  README.md  docker-compose.yml  fetch_models.py  mkdocs.yml  openai_server.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api-reference.md  getting-started.md  index.md  mcp-server.md  usage.md
src/perplexity_webui_scraper/: __init__.py  config.py  constants.py  core.py  enums.py  exceptions.py  fetch_models.py  http.py  logging.py  models.py  resilience.py  types.py
src/perplexity_webui_scraper/cli/: get_perplexity_session_token.py
src/perplexity_webui_scraper/mcp/: __init__.py  __main__.py  server.py
