[project]
name = "perplexity-webui-scraper"
version = "1.0.0"
description = "Production-ready OpenAI-compatible API proxy for Perplexity."
authors = [{ name = "Max", email = "opensource@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["perplexity", "openai", "proxy", "fastapi", "api", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "curl-cffi>=0.13.0",
    "fastapi>=0.115.0",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
]
lint = [
    "ruff>=0.14.8",
]
tests = [
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/max/perplexity-webui-scraper"
Documentation = "https://github.com/max/perplexity-webui-scraper#readme"
Repository = "https://github.com/max/perplexity-webui-scraper.git"
Issues = "https://github.com/max/perplexity-webui-scraper/issues"
Changelog = "https://github.com/max/perplexity-webui-scraper/releases"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "F",      # Pyflakes: unused imports/variables, undefined names
    "E",      # pycodestyle errors: basic PEP 8 style violations
    "W",      # pycodestyle warnings: whitespace issues, blank lines
    "I",      # isort: import sorting and organization
    "UP",     # pyupgrade: upgrade syntax for newer Python versions
    "B",      # flake8-bugbear: common bugs and design problems
    "SIM",    # flake8-simplify: simplify complex code patterns
    "C4",     # flake8-comprehensions: better list/dict/set comprehensions
    "PIE",    # flake8-pie: misc. lints (unnecessary pass, duplicate keys)
    "RUF",    # Ruff-specific: modern Python best practices
    "PERF",   # Perflint: performance anti-patterns
    "FURB",   # refurb: modernize legacy Python idioms
    "PTH",    # flake8-use-pathlib: prefer pathlib over os.path
    "T20",    # flake8-print: detect leftover print() statements
    "TCH",    # flake8-type-checking: optimize TYPE_CHECKING imports
    "PL",     # Pylint: broad set of code quality checks
    "D205",   # 1 blank line required between docstring and code
]
ignore = [
    "PLR0912",   # Too many branches (complex validation logic is acceptable)
    "PLR0913",   # Too many arguments in function definition (common in APIs)
    "PLR2004",   # Magic value used in comparison (too strict for general use)
]
fixable = ["ALL"]            # Allow auto-fix for all enabled rules
dummy-variable-rgx = "^_$"   # Only underscore is considered a dummy variable

[tool.ruff.lint.isort]
known-first-party = ["perplexity_webui_scraper"]
lines-after-imports = 2             # PEP 8: two blank lines after imports
force-sort-within-sections = true   # Alphabetical order within each section
split-on-trailing-comma = true      # Trailing comma triggers multi-line format

[tool.ruff.lint.pydocstyle]
convention = "google"   # Google-style docstrings (Args, Returns, Raises)

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"   # Docstrings must use triple double quotes

[tool.ruff.format]
quote-style = "double"              # Strings use double quotes (PEP 8 preference)
indent-style = "space"              # Spaces over tabs (PEP 8)
line-ending = "lf"                  # Unix-style line endings
docstring-code-format = true        # Format code examples inside docstrings
skip-magic-trailing-comma = false   # Preserve trailing commas as formatting hints

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
