[project]
name = "perplexity-webui-scraper"
version = "0.6.1"
description = "Python scraper to extract AI responses from Perplexity's web interface."
authors = [{ name = "Henrique Moreira", email = "github@henriquecoder.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["perplexity", "ai", "scraper", "webui", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "curl-cffi>=0.14.0",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
]
lint = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/henrique-coder/perplexity-webui-scraper"
Documentation = "https://github.com/henrique-coder/perplexity-webui-scraper#readme"
Repository = "https://github.com/henrique-coder/perplexity-webui-scraper.git"
Issues = "https://github.com/henrique-coder/perplexity-webui-scraper/issues"
Changelog = "https://github.com/henrique-coder/perplexity-webui-scraper/releases"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "F",     # Pyflakes: unused imports/variables, undefined names
    "E",     # pycodestyle errors: PEP 8 style violations
    "W",     # pycodestyle warnings: whitespace and blank line issues
    "I",     # isort: import sorting and organization
    "N",     # pep8-naming: PEP 8 naming conventions
    "UP",    # pyupgrade: upgrade syntax for newer Python versions
    "ANN",   # flake8-annotations: enforce type hints
    "FA",    # flake8-future-annotations: require from __future__ import annotations
    "ICN",   # flake8-import-conventions: standard import aliases
    "B",     # flake8-bugbear: common bugs and design problems
    "SIM",   # flake8-simplify: simplify complex code patterns
    "C4",    # flake8-comprehensions: better list/dict/set comprehensions
    "PIE",   # flake8-pie: unnecessary pass, duplicate keys
    "ISC",   # flake8-implicit-str-concat: implicit string concatenation
    "RSE",   # flake8-raise: unnecessary parentheses on raise
    "RET",   # flake8-return: return statement best practices
    "PTH",   # flake8-use-pathlib: prefer pathlib over os.path
    "T20",   # flake8-print: detect leftover print() statements
    "TCH",   # flake8-type-checking: optimize TYPE_CHECKING imports
    "G",     # flake8-logging-format: logging best practices
    "LOG",   # flake8-logging: correct use of logging module
    "TRY",   # tryceratops: try/except best practices
    "ERA",   # eradicate: detect commented-out code
    "PERF",  # Perflint: performance anti-patterns
    "FURB",  # refurb: modernize legacy Python idioms
    "PL",    # Pylint: broad code quality checks
    "RUF",   # Ruff-specific: modern Python best practices
    "D205",  # pydocstyle: blank line required between summary and description
]
ignore = [
    "ISC001",   # Implicit string concatenation on one line: conflicts with formatter
    "TRY003",   # Long exception messages outside exception class: overly opinionated
    "TRY301",   # Abstract raise to inner function: too opinionated for validation code
    "G004",     # Logging with f-string: loguru prefers f-strings
    "PLE1205",  # Too many arguments for logging format: false positive for loguru {}
    "PLR0912",  # Too many branches: acceptable for complex validation logic
    "PLR0913",  # Too many arguments: common in APIs and constructors
    "PLR0915",  # Too many statements: acceptable for complex validation logic
    "PLR2004",  # Magic value in comparison: too strict for general use
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-sort-within-sections = true
split-on-trailing-comma = true
known-first-party = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
allow-star-arg-any = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ty.rules]
invalid-argument-type         = "error"
invalid-return-type           = "error"
missing-argument              = "error"
too-many-positional-arguments = "error"
undefined-attribute           = "error"
unresolved-import             = "error"
unsupported-operator          = "error"
possibly-missing-attribute    = "warn"
possibly-unbound              = "warn"
redundant-cast                = "warn"
unused-ignore-comment         = "warn"
division-by-zero              = "warn"
index-out-of-bounds           = "warn"

[project.scripts]
get-perplexity-session-token = "perplexity_webui_scraper.cli.get_perplexity_session_token:get_token"
perplexity-webui-scraper-mcp = "perplexity_webui_scraper.mcp:run_server"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
